--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,26 @@ h1,
 h2 {
   margin: 0;
 }
+nav {
+  position: fixed;
+  padding: 30px 0;
+  text-align: right;
+  width: 100%;
+}
+nav a {
+  margin-right: 30px;
+  text-decoration: none;
+}
 h1 {
   text-align: center;
+  padding-top: 100px;
 }
 .full-screen {
   height: 120vh;
 }
 .blue {
-  background-color: rgba(0, 0, 255, 0.1);
+  background-color: #f2f2ff;
 }
 .purple {
-  background-color: rgba(80, 0, 80, 0.1);
+  background-color: #fff2ff;
 }
