--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,9 @@ nav a {
   margin-right: 30px;
   text-decoration: none;
 }
+.shadow {
+  box-shadow: 0 5px 15px rgba(192, 192, 192, 0.6);
+}
 h1 {
   text-align: center;
   padding-top: 100px;
@@ -25,4 +28,7 @@ h1 {
 }
 .purple {
   background-color: #fff2ff;
+}
+section {
+  padding-top: 100px;
 }
