--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ nav {
   padding: 30px 0;
   text-align: right;
   width: 100%;
+  z-index: 3;
 }
 nav a {
   margin-right: 30px;
@@ -53,14 +54,68 @@ figure {
   border-radius: 20px;
   box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
 }
+#projects-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+  padding: 30px 80px 50px;
+}
+.project-card {
+  position: relative;
+  height: 30vw;
+  padding: 20px;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
+}
+.mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  z-index: 2;
+}
+.mask:hover {
+  background-color: purple;
+  opacity: 0.9;
+}
+iframe {
+  width: 250%;
+  height: 250%;
+  border: none;
+  -ms-transform: scale(0.4);
+  -moz-transform: scale(0.4);
+  -o-transform: scale(0.4);
+  -webkit-transform: scale(0.4);
+  transform: scale(0.4);
+  -ms-transform-origin: 0 0;
+  -moz-transform-origin: 0 0;
+  -o-transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+  background-color: white;
+  border-radius: 20px;
+  z-index: 1;
+}
 @media screen and (max-width: 1600px) {
   #skills-container {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+  #projects-container {
+    grid-template-columns: 1fr 1fr;
   }
 }
 @media screen and (max-width: 992px) {
   #skills-container {
     grid-template-columns: 1fr 1fr;
+  }
+  #projects-container {
+    grid-template-columns: 1fr;
+  }
+  .project-card {
+    height: 50vw;
   }
 }
 @media screen and (max-width: 768px) {
