--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ nav {
   padding: 30px 0;
   text-align: right;
   width: 100%;
-  z-index: 3;
+  z-index: 10;
 }
 nav a {
   margin-right: 30px;
@@ -68,7 +68,7 @@ figure {
   border-radius: 20px;
   box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
 }
-.mask {
+.main-mask {
   position: absolute;
   top: 0;
   left: 0;
@@ -77,9 +77,49 @@ figure {
   border-radius: 20px;
   z-index: 2;
 }
+.main-mask img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.project-details {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(80, 0, 80, 0.85);
+  border-radius: 20px;
+  display: none;
+}
+.project-details h3 {
+  padding-top: 50px;
+}
+.project-details h3,
+.project-details p {
+  color: white;
+  text-align: center;
+}
+/*
 .mask:hover {
   background-color: purple;
   opacity: 0.9;
+}
+*/
+.main-mask:hover + div.project-details {
+  display: block;
+}
+.main-mask:hover span.key-word {
+  display: inline;
+}
+.project-details span.key-word {
+  color: purple;
+  background-color: #f2f2ff;
+  margin-right: 10px;
+  padding: 8px;
+  border-radius: 10px;
 }
 iframe {
   width: 250%;
