--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,83 @@ iframe {
   border-radius: 20px;
   z-index: 1;
 }
+#contact-form {
+  max-width: 360px;
+  padding: 30px;
+  margin: auto;
+  background-color: rgba(0, 0, 255, 0.1);
+  box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+}
+#contact-form * {
+  display: block;
+}
+#contact-form input {
+  height: 25px;
+  border: thin solid black;
+}
+#contact-form input,
+#contact-form textarea {
+  width: 100%;
+  margin-bottom: 15px;
+  border-radius: 5px;
+}
+#contact-form input:focus,
+#contact-form textarea:focus {
+  border: thin solid blue;
+  outline: none;
+}
+#contact-form textarea {
+  height: 150px;
+}
+#submit-btn {
+  margin: 25px auto 0;
+  border: 0;
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: rgba(220, 0, 0, 1);
+  background-image: linear-gradient(
+    to top left,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0)
+  );
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
+    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+}
+#submit-btn:hover {
+  background-color: rgba(255, 0, 0, 1);
+  cursor: pointer;
+}
+#submit-btn:active:enabled {
+  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
+    inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+}
+#submit-btn:disabled {
+  background-color: dimgrey;
+}
+#social-media {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+}
+#social-media a {
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  padding: 5px;
+  border-radius: 50px;
+  box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
+}
+#social-media img {
+  width: 100%;
+}
 @media screen and (max-width: 1600px) {
   #skills-container {
     grid-template-columns: 1fr 1fr 1fr;
