--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ figure {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(80, 0, 80, 0.85);
+  background: linear-gradient(rgba(80, 0, 80, 0.9), transparent);
   border-radius: 20px;
   display: none;
 }
@@ -163,14 +163,16 @@ figure {
   color: white;
   text-align: center;
 }
-.main-mask:hover + div.project-details {
+.main-mask:hover div.project-details {
   display: block;
 }
-.main-mask:hover span.key-word {
-  display: inline;
+.main-mask:hover + iframe {
+  opacity: 0.2;
 }
 .project-details span.key-word {
   color: purple;
+  font-size: 12px;
+  font-weight: 700;
   background-color: #f2f2ff;
   margin-right: 10px;
   padding: 8px;
@@ -250,8 +252,19 @@ iframe {
   color: red;
 }
 #submit-btn {
-  display: block;
   margin: 25px auto 0;
+}
+a.button {
+  text-decoration: none;
+  width: fit-content;
+  position: absolute;
+  bottom: 80px;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.button {
+  display: block;
   border: 0;
   line-height: 2.5;
   padding: 0 20px;
@@ -270,15 +283,15 @@ iframe {
   box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
     inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
-#submit-btn:hover {
+.button:hover {
   background-color: rgba(255, 0, 0, 1);
   cursor: pointer;
 }
-#submit-btn:active:enabled {
+.button:active:enabled {
   box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
     inset 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
-#submit-btn:disabled {
+.button:disabled {
   background-color: dimgrey;
 }
 #social-media {
