--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,21 @@ h2.home-sections {
 nav {
   position: fixed;
   padding: 30px 0;
-  text-align: right;
-  width: 100%;
+  /*text-align: right;
+  width: 100%;*/
+  width: 100vw;
+  display: flex;
+  justify-content: flex-end;
+  gap: 30px;
   z-index: 10;
+}
+nav img {
+  width: 30px;
+  display: none;
+  padding-bottom: 5px;
+}
+nav img:hover {
+  cursor: pointer;
 }
 nav a {
   color: purple;
@@ -33,6 +45,9 @@ nav a {
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 700;
+}
+nav a:last-child {
+  margin-right: 50px;
 }
 nav a:hover {
   color: orangered;
@@ -380,6 +395,12 @@ a.back-link:hover {
   }
 }
 @media screen and (max-width: 992px) {
+  nav {
+    justify-content: center;
+  }
+  nav a:last-child {
+    margin-right: 0;
+  }
   #skills-container {
     grid-template-columns: 1fr 1fr;
   }
@@ -391,6 +412,34 @@ a.back-link:hover {
   }
 }
 @media screen and (max-width: 768px) {
+  nav.blue {
+    position: absolute;
+    gap: 0;
+    flex-direction: column;
+    align-items: flex-end;
+    margin: 20px;
+    padding: 10px;
+    width: max-content;
+    right: 0;
+    background-color: rgba(242, 242, 255, 0.8);
+  }
+  nav.shadow {
+    box-shadow: none;
+  }
+  nav a {
+    margin-right: 0;
+    padding: 10px 0;
+    display: none;
+  }
+  nav a.hamburger-menu {
+    display: inline;
+  }
+  nav img {
+    display: inline;
+  }
+  #hand-held-out img {
+    width: 60%;
+  }
   #skills-container {
     grid-template-columns: 1fr;
   }
