--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,63 @@ h1#project-title {
 #hand-held-out img {
   width: 500px;
 }
+.anim-3pts {
+  display: inline;
+}
+.pt1 {
+  animation: pt1-flash 1.5s infinite;
+  color: lightgray;
+}
+@keyframes pt1-flash {
+  0% {
+    color: #000;
+  }
+  33% {
+    color: black;
+  }
+  50% {
+    color: lightgray;
+  }
+  100% {
+    color: lightgray;
+  }
+}
+.pt2 {
+  animation: pt2-flash 1.5s infinite;
+  color: gray;
+}
+@keyframes pt2-flash {
+  0% {
+    color: lightgray;
+  }
+  33% {
+    color: lightgray;
+  }
+  50% {
+    color: black;
+  }
+  100% {
+    color: lightgray;
+  }
+}
+.pt3 {
+  animation: pt3-flash 1.5s 0.1s infinite;
+  color: lightgray;
+}
+@keyframes pt3-flash {
+  0% {
+    color: lightgray;
+  }
+  50% {
+    color: lightgray;
+  }
+  66% {
+    color: #000;
+  }
+  100% {
+    color: #000;
+  }
+}
 #about-me {
   position: relative;
 }
@@ -178,40 +235,56 @@ figure {
   background-color: white;
   border-radius: 20px;
   box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
-  /*opacity: 0;*/
+  opacity: 1;
 }
-
+#mask-skills {
+  background-color: #f2f2ff;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  bottom: 0;
+  z-index: 5;
+  animation: mask-reduce-height 4.5s;
+}
+@keyframes mask-reduce-height {
+  from {
+    height: 100%;
+  }
+  to {
+    height: 0;
+  }
+}
 #fig1,
 #fig2,
 #fig3 {
-  animation: card-display 1s ease-in-out;
+  animation: card-display 0.5s;
 }
 
 #fig4,
 #fig5,
 #fig6 {
-  animation: card-display 2s ease-in-out;
+  animation: card-display 0.5s 0.5s;
 }
 
 #fig7,
 #fig8,
 #fig9 {
-  animation: card-display 3s ease-in-out;
+  animation: card-display 0.5s 1s;
 }
 #fig10,
 #fig11,
 #fig12 {
-  animation: card-display 4s ease-in-out;
+  animation: card-display 0.5s 1.5s;
 }
 #fig13,
 #fig14,
 #fig15 {
-  animation: card-display 5s ease-in-out;
+  animation: card-display 0.5s 2s;
 }
 #fig16,
 #fig17,
 #fig18 {
-  animation: card-display 6s ease-in-out;
+  animation: card-display 0.5s 2.5s;
 }
 
 @keyframes card-display {
