--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,22 @@ section.long {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 30px;
+  height: 1;
+  opacity: 1;
+  /*animation: skills-height 8s;*/
 }
+/*
+@keyframes skills-height {
+  from {
+    height: 0;
+    opacity: 0;
+  }
+  to {
+    height: 100%;
+    opacity: 1;
+  }
+}
+*/
 #skills-container img {
   width: 64px;
   height: 64px;
@@ -248,59 +263,90 @@ figure {
   background-color: white;
   border-radius: 20px;
   box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
+  animation: display-skill 0.5s infinite 5s;
 }
-/*
+@keyframes display-skill {
+  from {
+    opacity: 0;
+  }
+  99.99% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 #mask-skills {
   background-color: #f2f2ff;
+  opacity: 0;
   position: absolute;
-  width: 100%;
-  height: 0;
-  bottom: 0;
+  width: 103%;
+  height: 780px;
+  bottom: -20px;
+  margin-left: -20px;
   z-index: 5;
-  animation: mask-reduce-height 4.5s;
+}
+.mask-reduce {
+  animation: mask-reduce-height 5s;
 }
 @keyframes mask-reduce-height {
   from {
-    height: 100%;
+    height: 780px;
+    opacity: 1;
+  }
+  16.5% {
+    height: 780px;
+  }
+  16.66% {
+    height: 620px;
+  }
+  33.2% {
+    height: 620px;
+  }
+  33.33% {
+    height: 472px;
+  }
+  49.9% {
+    height: 472px;
+  }
+  50% {
+    height: 308px;
+  }
+  66.5% {
+    height: 308px;
+  }
+  66.66% {
+    height: 164px;
+  }
+  83.2% {
+    height: 164px;
   }
   to {
     height: 0;
+    opacity: 1;
   }
 }
-
-#fig1,
-#fig2,
-#fig3 {
-  animation: card-display 0.5s;
+.row-1 {
+  animation: card-display 1s ease-in-out;
 }
 
-#fig4,
-#fig5,
-#fig6 {
-  animation: card-display 0.5s 0.5s;
+.row-2 {
+  animation: card-display 1s ease-in-out 1s;
 }
 
-#fig7,
-#fig8,
-#fig9 {
-  animation: card-display 0.5s 1s;
+.row-3 {
+  animation: card-display 1s ease-in-out 2s;
 }
-#fig10,
-#fig11,
-#fig12 {
-  animation: card-display 0.5s 1.5s;
+.row-4 {
+  animation: card-display 1s ease-in-out 3s;
 }
-#fig13,
-#fig14,
-#fig15 {
-  animation: card-display 0.5s 2s;
+.row-5 {
+  animation: card-display 1s ease-in-out 4s;
 }
-#fig16,
-#fig17,
-#fig18 {
-  animation: card-display 0.5s 2.5s;
+.row-6 {
+  animation: card-display 1s ease-in-out 5s;
 }
-*/
+
 @keyframes card-display {
   from {
     opacity: 0;
