--- a/styles.css
+++ b/styles.css
@@ -251,89 +251,8 @@ figure {
   box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
   opacity: 0;
 }
-.row-0 {
-  animation: row0-display 7s ease-in-out forwards;
-}
-.row-1 {
-  animation: row1-display 6s ease-in-out 1s forwards;
-}
-.row-2 {
-  animation: row2-display 5s ease-in-out 2s forwards;
-}
-.row-3 {
-  animation: row3-display 4s ease-in-out 3s forwards;
-}
-.row-4 {
-  animation: row4-display 3s ease-in-out 4s forwards;
-}
-.row-5 {
-  animation: row5-display 2s ease-in-out 5s forwards;
-}
-.row-6 {
-  animation: row6-display 1s ease-in-out 6s forwards;
-}
-@keyframes row0-display {
-  from {
-    opacity: 0;
-  }
-  16.66% {
-    opacity: 1;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes row1-display {
-  from {
-    opacity: 0;
-  }
-  20% {
-    opacity: 1;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes row2-display {
-  from {
-    opacity: 0;
-  }
-  25% {
-    opacity: 1;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes row3-display {
-  from {
-    opacity: 0;
-  }
-  33.33% {
-    opacity: 1;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes row4-display {
-  from {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes row5-display {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+.display-skill {
+  animation: progressive-display 1s ease-in-out forwards;
 }
 
 #projects-container {
