--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,9 @@ h2.home-sections {
 nav {
   position: fixed;
   padding: 30px 0;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  gap: 30px;
+  width: 100vw;
+  display: inline;
+  text-align: right;
   z-index: 10;
 }
 nav img {
@@ -39,7 +38,7 @@ nav img:hover {
 }
 nav a {
   color: purple;
-  margin-right: 30px;
+  margin-right: 60px;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 700;
@@ -558,7 +557,7 @@ a.back-link:hover {
 }
 @media screen and (max-width: 992px) {
   nav {
-    justify-content: center;
+    text-align: center;
   }
   nav a:last-child {
     margin-right: 0;
